# chunker

./: .gitignore  Dockerfile  README.md  config.sh  docker_build.sh  docker_run.sh  gcloud_create.sh  gcloud_delete.sh  gcloud_run.sh  gcp-service.template.yaml  load_model.py  load_models.py  pyproject.toml  run_dev.sh
app/: app_config.py  app_state.py  config.py  dependencies.py  log_config.py  log_context.py  main.py  otel.py  version.py
app/features/chunk/: chunk_service.py  recursive_splitter.py
app/features/chunks/: chunk_model.py  chunk_service.py
app/features/embeddings/: embedding_model.py  embedding_service.py
app/message_routers/: chunk_embedding_request_message_router.py  chunk_request_message_router.py
app/routers/: chunks.py  config.py  embeddings.py  pub_sub.py
infra/: .terraform.lock.hcl  example.tfvars  main.tf  outputs.tf  variables.tf
infra/modules/pubsub-topic-with-dlq/: main.tf  outputs.tf  variables.tf
tests/: conftest.py  test_load_model.py
tests/app/: test_main.py  test_subscriptions.py
tests/data/: long_pl.txt
tests/features/chunk/: test_chunk_model.py  test_recursive_splitter.py
tests/features/embeddings/: test_embedding_service.py
tests/routers/: conftest.py  test_config.py  test_embeddings.py  test_ping.py  test_pub_sub.py  test_pub_sub_chunking.py
