[project]
name = "chunker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi[standard]>=0.115.12",
    "gunicorn>=23.0.0",
    "pydantic-settings>=2.9.1",
    "python-dotenv>=1.1.0",
    "uvicorn[standard]>=0.34.2",
]

[tool.pytest.ini_options]
pythonpath = [
  "app"
]

[dependency-groups]
dev = [
    "coverage>=7.8.0",
    "httpx>=0.28.1",
    "pytest>=8.3.5",
    "pytest-asyncio>=0.26.0",
    "pytest-cov>=6.1.1",
]
